--- a/css/styles.css
+++ b/css/styles.css
@@ -1,19 +1,11 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&family=Ubuntu:wght@300&display=swap');
-body{font-family:  'Montserrat', sans-serif;;
-    
-}
-.container-fluid{
-    padding: 2% 15% 10%;
-}
-#title{
-    background-color: #ff4c68;
-}
 
-#title h1{
+
+body{font-family:  'Montserrat', sans-serif;}
+    
+h1,h2,h3,h4,h5{
     font-family: 'Montserrat', sans-serif;
-    size: 100px;
-    line-height: 1.5;
 }
 h2{
     font-family: 'Montserrat', sans-serif;
@@ -21,6 +13,21 @@ h2{
     line-height: 1.5;
    
 }
+
+.container-fluid{
+    padding: 2% 15% 10%;
+}
+
+#title{
+    background-color: #ff4c68;
+}
+
+#title h1{
+    
+    size: 100px;
+    line-height: 1.5;
+}
+
 /* navbar */
 .navbar{
     padding-bottom: 4.5rem;
